--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,6 +34,9 @@ spring:
           auth: true
           starttls:
             enable: true
+  elasticsearch:
+    username: elastic
+    password: elastic
 
 management:
   endpoint:
