--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,10 @@ server:
     session:
       timeout: 60m  # Session timeout
 
+
 spring:
+  main:
+    allow-bean-definition-overriding: true
   servlet:
     multipart:
       max-file-size: 10MB
@@ -37,6 +40,7 @@ spring:
   elasticsearch:
     username: elastic
     password: elastic
+    uris: "localhost:9200"
 
 management:
   endpoint:
