--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,6 +23,12 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+#  liquibase:
+#    change-log: db/changelog/liquibase-changelog.xml
+#    database-change-log-table: changelog_${spring.application.name}
+#    database-change-log-lock-table: changelog_lock_${spring.application.name}
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -35,11 +41,21 @@ spring:
           starttls:
             enable: true
 
+elasticsearch:
+  host: ${ELASTICSEARCH_HOST_CORE:localhost}
+  port: ${ELASTICSEARCH_PORT:9200}
+  username: ${ELASTICSEARCH_USERNAME:elastic}
+  password: ${ELASTICSEARCH_PASSWORD:elastic}
+  index-names:
+    recipe_index: recipe_index
+
 management:
   endpoint:
     web:
       exposure:
         include: "*"
+
+
 
 app:
   baseUrl: http://cookscorner
