--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,19 @@
 version: "3.9"
 
 services:
+#  cookscorner:
+#    container_name: cookscorner-container
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - postgres
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cookscorner
+
+
   postgres:
     container_name: cookscorner
     image: postgres:11.0-alpine
@@ -10,3 +23,71 @@ services:
       POSTGRES_DB: cookscorner
     ports:
       - "5432:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+  elasticsearch:
+    image: elasticsearch:7.16.2
+    volumes:
+      - elasticsearch:/usr/share/elasticsearch/data
+    environment:
+      ES_JAVA_OPTS: "-Xmx512m -Xms256m"
+      ELASTIC_PASSWORD: elastic
+      # Use single node discovery in order to disable production mode and avoid bootstrap checks
+      # see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
+      discovery.type: single-node
+      # X-Pack security needs to be enabled for Elasticsearch to actually authenticate requests
+      xpack.security.enabled: "true"
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    restart: unless-stopped
+
+#  elasticsearch:
+#    image: elasticsearch:7.16.2
+#    environment:
+#      ES_JAVA_OPTS: "-Xmx512m -Xms256m"
+#      ELASTIC_PASSWORD: elastic
+#      discovery.type: single-node
+#    ports:
+#      - "9200:9200"
+#      - "9300:9300"
+#    restart: unless-stopped
+#    volumes:
+#      - elasticsearch:/usr/share/elasticsearch/data
+
+#  logstash:
+#    image: logstash:7.16.2
+#    ports:
+#      - "5001:5001"
+#      - "9600:9600"
+#    environment:
+#      LS_JAVA_OPTS: "-Xmx512m -Xms256m"
+#      ELASTIC_USER: elastic
+#      ELASTIC_PASSWORD: elastic
+#      XPACK_MONITORING_ELASTICSEARCH_USERNAME: elastic
+#      XPACK_MONITORING_ELASTICSEARCH_PASSWORD: elastic
+#      XPACK_MONITORING_ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+#      XPACK_MONITORING_ENABLED: "true"
+#    restart: unless-stopped
+#    depends_on:
+#      - elasticsearch
+#    volumes:
+#      - "./pipeline:/usr/share/logstash/pipeline"
+#
+#  kibana:
+#    image: kibana:7.16.2
+#    environment:
+#      ELASTICSEARCH_USERNAME: elastic
+#      ELASTICSEARCH_PASSWORD: elastic
+#      XPACK_MONITORING_UI_CONTAINER_ELASTICSEARCH_ENABLED: "true"
+#    ports:
+#      - "5601:5601"
+#    restart: unless-stopped
+#    depends_on:
+#      - elasticsearch
+#      - logstash
+
+volumes:
+  db-data:
+  elasticsearch:
